syntax = "proto3";

option go_package = "gitlab.com/ConsenSys/client/fr/core-stack/pkg.git/types/abi";

package abi;

// Contract holds contract information
message Contract {
    // Registry of contract
    // e.g. "registry.consensys.net/corestack"
    string registry = 1;

    // Name of contract
    // e.g. "ERC20"
    string name = 2;

    // Contract tag
    // e.g "v2.1.3"
    string tag = 3;

    // Contract ABI (optional)
    bytes abi = 4;

    // Contract deployment bytecode (optional)
    bytes bytecode = 5;

    // Contract deployed bytecode (optional)
    bytes deployedBytecode = 6;
}

// Method 
message Method {
    // Signature of the method to call on contract
    // e.g "transfer(address,uint256)"
    string signature = 1;

    // ABI of the method (Optional)
    bytes abi = 2;
}
